tests/ui/bool_comparison.stderr
error: equality checks against true are unnecessary
 --> $DIR/bool_comparison.rs:7:8
  |
7 |     if x == true { "yes" } else { "no" };
  |        ^^^^^^^^^ help: try simplifying it as shown: `x`
  |
note: lint level defined here
 --> $DIR/bool_comparison.rs:4:8
  |
4 | #[deny(bool_comparison)]
  |        ^^^^^^^^^^^^^^^

error: equality checks against false can be replaced by a negation
 --> $DIR/bool_comparison.rs:8:8
  |
8 |     if x == false { "yes" } else { "no" };
  |        ^^^^^^^^^^ help: try simplifying it as shown: `!x`

error: equality checks against true are unnecessary
 --> $DIR/bool_comparison.rs:9:8
  |
9 |     if true == x { "yes" } else { "no" };
  |        ^^^^^^^^^ help: try simplifying it as shown: `x`

error: equality checks against false can be replaced by a negation
  --> $DIR/bool_comparison.rs:10:8
   |
10 |     if false == x { "yes" } else { "no" };
   |        ^^^^^^^^^^ help: try simplifying it as shown: `!x`

error: aborting due to 4 previous errors

